feat: verification otp

--- a/apps/authentication/templates/emails/otp_email.html
+++ b/apps/authentication/templates/emails/otp_email.html
@@ -55,7 +55,7 @@
             <!-- Footer Notice -->
             <tr>
               <td style="padding-top:10px; color:#777; font-size:13px; line-height:1.5;">
-                <p style="margin:0;">This code will expire in <strong>{{ expire_time }} minutes</strong>.</p>
+                <p style="margin:0;">This code will expire in <strong>{{ expiry_minutes }} minutes</strong>.</p>
                 <p style="margin:0;">If you didn’t request this, you can safely ignore this email.</p>
               </td>
             </tr>
