--- a/apps/authentication/templates/emails/welcome_mail.html
+++ b/apps/authentication/templates/emails/welcome_mail.html
@@ -26,7 +26,7 @@
             <!-- Message -->
             <tr>
               <td style="padding:20px 0; color:#555; font-size:15px; line-height:1.6;">
-                <p style="margin:0;">Hi <strong>{{ html_contents.full_name }}</strong>,</p>
+                <p style="margin:0;">Hi <strong>{{ full_name }}</strong>,</p>
                 <p style="margin-top:10px;">
                   We're excited to have you onboard! Your account has been successfully created.
                 </p>
